syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";

message ActionLink {
  oneof args {
    google.protobuf.Empty read_data = 1;
  }
}