syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";

import "stremio/core/types/video.proto";

message ActionMetaDetails {
  oneof args {
    bool mark_as_watched = 1;
    VideoState mark_video_as_watched = 2;
  }

  message VideoState {
    required stremio.core.types.Video video = 1;
    required bool is_watched = 2;
  }
}