syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";
import "stremio/core/models/player.proto";

message ActionPlayer {
  oneof args {
    stremio.core.models.Player.VideoParams video_params_changed = 1;
    stremio.core.models.Player.StreamState stream_state_changed = 2;
    PlayerItemState time_changed = 3;
    bool paused_changed = 4;
    google.protobuf.Empty ended = 5;
  }

  message PlayerItemState {
    required uint64 time = 1;
    required uint64 duration = 2;
    required string device = 3;
  }
}