syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

message ActionLibraryByType {
  oneof args {
    int32 load_next_page = 1;
  }
}