syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";
import "stremio/core/models/streaming_server.proto";

message ActionStreamingServer {
  oneof args {
    google.protobuf.Empty reload = 1;
    stremio.core.models.StreamingServer.Settings update_settings = 2;
    CreateTorrentArgs create_torrent = 3;
    stremio.core.models.StreamingServer.StatisticsRequest get_statistics = 4;
    PlayOnDeviceArgs play_on_device = 5;
  }
}

message CreateTorrentArgs {
  oneof args {
    bytes file = 1;
    string magnet = 2;
  }
}

message PlayOnDeviceArgs {
  required string device = 1;
  required string source = 2;
  optional int64 time = 3;
}